    build-dependencies accordingly.
  * Switch from Modern::Perl to strict + warnings + 5.010.
    + Drop (build-) dependency on libmodern-perl-perl.
  * Fix some issues found by Perl::Critic:
    + Add missing strictures.
    + Replace bareword file handles with variables.
    + Drop the sole (non-relevant) occurrence of subroutine prototypes.
  * Use Travis CI

 -- Axel Beckert <abe@debian.org>  Sat, 16 Aug 2014 02:44:05 +0200

unburden-home-dir (0.3.2.3) unstable; urgency=low

  * Bump Standards-Version to 3.9.5 (no further changes)
  * Use "lsof +D" instead of "find | buffer | xargs lsof".
    + Drop dependencies on "buffer".
  * Re-add corekeeper to Suggests as it's back in Debian.
  * Downgrade dependency on x11-common to Recommends, unburden-home-dir
    works outside the Xsession infrastructure for quite a while now.

 -- Axel Beckert <abe@debian.org>  Thu, 08 May 2014 01:49:37 +0200

unburden-home-dir (0.3.2.2) unstable; urgency=low

  * No more use "when" nor "my $_". Both features are marked experimental
    in Perl 5.18 and hence cause warnings which again cause test-suite
    failures. (Closes: #720762)
  * Bump debhelper compatibility to 9
    + Update versioned debhelper build-dependency accordingly

 -- Axel Beckert <abe@debian.org>  Sun, 25 Aug 2013 14:19:57 +0200

unburden-home-dir (0.3.2.1) unstable; urgency=low

  * man-page: Clarify why du and friends are helpful when configuring
    unburden-home-dir (Closes: #711820)
  * README/man page: Update information about corekeeper
  * Add ~/.devscripts_cache and qupzilla cache (Thanks Daniel Koch!) to
    unburden-home-dir.list

 -- Axel Beckert <abe@debian.org>  Wed, 10 Jul 2013 20:42:08 +0200

unburden-home-dir (0.3.2) unstable; urgency=low

  * Use "buffer" to prevent "find" still running when "lsof" is started by
    "xargs". Add dependency and build-dependency (for test-suite) on "buffer".
  * Fix trailing slashes on revert (GitHub issue #5, thanks Johan van den
    Dorpe!)